--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,6 +33,9 @@ jobs:
       - name: Install dependencies
         run: pnpm install --no-frozen-lockfile
 
+      - name: Type Check
+        run: pnpm run type-check
+
       - name: Run Cypress Test On ${{matrix.browser}} Browser
         uses: cypress-io/github-action@v5
         with:
