--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,8 +33,11 @@ jobs:
           node-version: 16
           cache: "pnpm"
 
-      - name: Install Edge
-        uses: browser-actions/setup-edge@v1
+      - name: Fetch Edge Browser
+        run: curl -O https://packages.microsoft.com/repos/edge/pool/main/m/microsoft-edge-stable/microsoft-edge-stable_112.0.1722.64_amd64.deb
+
+      - name: Install Edge Browser
+        run: sudo apt install ./microsoft-edge-stable_112.0.1722.64_amd64.deb
 
       - name: Display Edge version
         run: edge --version
