--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,7 +37,7 @@ jobs:
         run: curl -O https://packages.microsoft.com/repos/edge/pool/main/m/microsoft-edge-stable/microsoft-edge-stable_112.0.1722.64-1_amd64.deb
 
       - name: Install Edge Browser
-        run: sudo apt install ./microsoft-edge-stable_112.0.1722.64-1_amd64.deb
+        run: sudo dpkg -i ./microsoft-edge-stable_112.0.1722.64-1_amd64.deb
 
       - name: Display Edge version
         run: edge --version
