--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,16 +7,9 @@ on:
     types: [opened, synchronize]
 
 jobs:
-  build:
-    name: Test
-    timeout-minutes: 15
+  setup:
+    name: Setup
     runs-on: ubuntu-latest
-
-    strategy:
-      fail-fast: false
-      matrix:
-        browser: [chrome, firefox, edge]
-
     steps:
       - name: Check out code
         uses: actions/checkout@v3
@@ -54,10 +47,19 @@ jobs:
       - name: Type Check
         run: pnpm run type-check
 
+  build:
+    name: Test
+    timeout-minutes: 15
+    runs-on: ubuntu-latest
+    needs: setup
+    strategy:
+      fail-fast: false
+      matrix:
+        browser: [chrome, firefox, edge]
+    steps:
       - name: Run Cypress Test On ${{matrix.browser}} Browser
         uses: cypress-io/github-action@v5
         with:
           command: pnpm run test:${{ matrix.browser }}
         env:
-          # Change this value according to what you need
           SECRET_VALUE: ${{ secrets.SECRET_VALUE }}
