--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,9 +7,16 @@ on:
     types: [opened, synchronize]
 
 jobs:
-  setup:
-    name: Setup
+  build:
+    name: Test
+    timeout-minutes: 15
     runs-on: ubuntu-latest
+
+    strategy:
+      fail-fast: false
+      matrix:
+        browser: [chrome, firefox, edge]
+
     steps:
       - name: Check out code
         uses: actions/checkout@v3
@@ -47,19 +54,10 @@ jobs:
       - name: Type Check
         run: pnpm run type-check
 
-  build:
-    name: Test
-    timeout-minutes: 15
-    runs-on: ubuntu-latest
-    needs: setup
-    strategy:
-      fail-fast: false
-      matrix:
-        browser: [chrome, firefox, edge]
-    steps:
       - name: Run Cypress Test On ${{matrix.browser}} Browser
         uses: cypress-io/github-action@v5
         with:
           command: pnpm run test:${{ matrix.browser }}
         env:
+          # Change this value according to what you need
           SECRET_VALUE: ${{ secrets.SECRET_VALUE }}
