add mochawesome reporter and upload test artifact

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -61,3 +61,8 @@ jobs:
         env:
           # Change this value according to what you need
           SECRET_VALUE: ${{ secrets.SECRET_VALUE }}
+
+      - uses: actions/upload-artifact@v3
+        with:
+          name: mochawesome-report
+          path: ./mochawesome-report
