--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
     "cy:open:edge": "cypress open --e2e --browser microsoft-edge",
     "prepare": "node -e \"try { require('husky').install() } catch (e) {if (e.code !== 'MODULE_NOT_FOUND') throw e}\"",
     "type-check": "tsc --noEmit",
-    "test:chrome": "cypress run --e2e --browser chrome",
-    "test:firefox": "cypress run --e2e --browser firefox",
-    "test:edge": "cypress run --e2e --browser edge",
-    "pre-commit": "npx lint-staged"
+    "test:chrome": "pnpm run pre-test && cypress run --e2e --browser chrome",
+    "test:firefox": "pnpm run pre-test && cypress run --e2e --browser firefox",
+    "test:edge": "pnpm run pre-test && cypress run --e2e --browser edge",
+    "pre-commit": "npx lint-staged",
+    "pre-test": "rm -rf ./mochawesome-report"
   },
   "devDependencies": {
     "@types/eslint": "^8.37.0",
@@ -19,6 +20,7 @@
     "@typescript-eslint/eslint-plugin": "^5.59.1",
     "@typescript-eslint/parser": "^5.59.1",
     "cypress": "^12.11.0",
+    "cypress-mochawesome-reporter": "^3.4.0",
     "eslint": "^8.39.0",
     "eslint-config-prettier": "^8.8.0",
     "husky": "^8.0.3",
