use different name for build artifacts based on browser name

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -72,5 +72,5 @@ jobs:
 
       - uses: actions/upload-artifact@v3
         with:
-          name: mochawesome-report
+          name: report-${{ matrix.browser }}
           path: ./mochawesome-report
